# FPL

./: .gitignore  CMakeLists.txt  Readme.md
ext/: Readme.md
include/FPL/: AstNodeBase.h  Base.h  LangCommon.h  Language.h  LexerBase.h  LexerCommon.h  ParserBase.h  ParserCommon.h  Process.h  ProcessCommon.h  Slice.h  Structure.h  TokenBase.h  TranslatorBase.h  TranslatorCommon.h  Value.h
src/: LexerBase.cpp  Process.cpp  Registry.cpp  Structure.cpp
src/viv/: Lexer.cpp
test/: Readme.md  TestLexer.cpp
vs/: FPL.cpp  FPL.sln  FPL.vcxproj
vs/LangCommon/: LangCommon.vcxproj
vs/Machine/: Machine.vcxproj
vs/VivLang/: VivLang.vcxproj  stdafx.cpp
